--- a/apps/DeskClock/res/layout/alarm_alert.xml
+++ b/apps/DeskClock/res/layout/alarm_alert.xml
@@ -47,10 +47,10 @@
 
         <com.android.deskclock.DigitalClock
             style="@style/clock"
-            android:paddingTop="30dip"
-            android:paddingBottom="30dip"
+            android:paddingTop="3dip"
+            android:paddingBottom="10dip"
             android:baselineAligned="true"
-            android:gravity="center_horizontal">
+            android:gravity="center_vertical">
 
             <TextView android:id="@+id/timeDisplay"
                 android:layout_width="wrap_content"
@@ -70,13 +70,15 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@android:style/ButtonBar">
+            style="@android:style/ButtonBar"
+            android:orientation="vertical">
 
             <Button
                 android:id="@+id/snooze"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
+                android:textSize="90sp"
                 android:text="@string/alarm_alert_snooze_text" />
 
             <!-- blank stretchable view -->
