--- a/apps/DeskClock/res/layout/alarm_alert.xml
+++ b/apps/DeskClock/res/layout/alarm_alert.xml
@@ -75,10 +75,10 @@
 
             <Button
                 android:id="@+id/snooze"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="70dip"
                 android:layout_weight="3"
-                android:textSize="70sp"
+                android:textSize="35sp"
                 android:text="@string/alarm_alert_snooze_text" />
 
             <!-- blank stretchable view -->
