need to close what is opened in an XML
Change-Id: If48b95ca37dd68d97960ab2db17bff3419a96a55

--- a/apps/Settings/res/layout/DataControl.xml
+++ b/apps/Settings/res/layout/DataControl.xml
@@ -14,4 +14,4 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="onCheckboxClicked"/>
-
+</LinearLayout>
