Added the check box
This will be the quick connect/disconnect.

--- a/apps/Settings/res/xml/wireless_settings.xml
+++ b/apps/Settings/res/xml/wireless_settings.xml
@@ -24,6 +24,12 @@
         android:disableDependentsState="true" />
 
      <!--Data controls-->
+    <CheckBoxPreference
+        android:key="toggle_DataControl"
+        android:title="@string/Data_quick_toggle_title"
+        android:summary="@string/Data_quick_toggle_summary"
+        android:persistent="false" />
+
     <PreferenceScreen
         android:key="Data_Control"
         android:title="@string/Data_Control"
